# guard_macros

./: Cargo.toml  LICENSE.md  README.md  common.rs  guard.rs  lib.rs
.github/workflows/: doc.yml
examples/: event_handling.rs  test.rs  test_make_guard.rs
src/: common.rs  guard.rs  lib.rs  make_guard.rs
tests/: event_handling.rs  test_make_guard.rs
