[package]
name = "guard_macros"
version = "1.0.0"
edition = "2021"

[lib]
proc_macro = true

[dependencies.proc-macro2]
version = "1"
default-features = false

[dependencies.quote]
version = "1"
default-features = false

[dependencies.syn]
version = "2"
default-features = false
features = ["printing", "parsing", "proc-macro", "full"]

[features]
debug-print = ["syn/extra-traits"]
