[package]
name = "guard_macros"
version = "1.0.0"
edition = "2021"
license = "MIT"
description = "Convenient Rust guard macros."
authors = ["Yuki Hiragino <yuki@shiina.family>"]
repository = "https://github.com/hiraginoyuki/guard_macros"

[lib]
proc_macro = true
path = "src/lib.rs"

[dependencies.proc-macro2]
version = "1"
default-features = false

[dependencies.quote]
version = "1"
default-features = false

[dependencies.syn]
version = "2"
default-features = false
features = ["printing", "parsing", "proc-macro", "full"]

[features]
debug-print = ["syn/extra-traits"]
